English language html attr

--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>{% block head_title %}{% endblock %}</title>
     {% block extra_head %}
