--- a/Praneeth/scl-doubtology/udayagiri/templates/includes/navbar.html
+++ b/Praneeth/scl-doubtology/udayagiri/templates/includes/navbar.html
@@ -1,7 +1,8 @@
+{% load static %}
 <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
             <div class="container-fluid d-flex flex-column p-0">
                 <a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
-                    <div class="sidebar-brand-icon rotate-n-15"><i class="fas fa-laugh-wink"></i></div>
+                    <div class="sidebar-brand-icon "><img src="{% static 'assets/img/logo/logo.png' %}" class="avatar" width="60px"></div>
                     <div class="sidebar-brand-text mx-3"><span>UDAYAGIRI</span></div>
                 </a>
                 <hr class="sidebar-divider my-0">
