--- a/Praneeth/scl-doubtology/udayagiri/templates/auth_base.html
+++ b/Praneeth/scl-doubtology/udayagiri/templates/auth_base.html
@@ -4,6 +4,7 @@
 {% include 'includes/head.html' %}
 
 <body class="bg-gradient-primary">
+{% include 'messages.html' %}
 <div class="container">
 
 {% block content %}
