--- a/Praneeth/scl-doubtology/udayagiri/templates/base.html
+++ b/Praneeth/scl-doubtology/udayagiri/templates/base.html
@@ -4,9 +4,11 @@
 {% include 'includes/head.html' %}
 
 <body id="page-top">
+
+{% include 'messages.html' %}
+
 <div id="wrapper">
 {% include 'includes/navbar.html' %}
-
 {% block content %}
 {% endblock content %}
 
