--- a/scl-doubtology/udayagiri/templates/webpages/index.html
+++ b/scl-doubtology/udayagiri/templates/webpages/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Dream Pulse TemplateMo</title>
+    <title>MY WEBPAGE</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="css/all.min.css" />
@@ -26,41 +26,14 @@
               <div class="tm-brand-box">
                 <div class="tm-double-border-1">
                   <div class="tm-double-border-2">
-                    <h1 class="tm-brand text-uppercase">Dream Pulse</h1>
+                    <h1 class="tm-brand text-uppercase">UDAYAGIRI</h1>
                   </div>
                 </div>
               </div>
 
               <ul id="tmMainNav" class="nav flex-column text-uppercase text-right tm-main-nav">
-                <li class="nav-item">
-                  <a href="#intro" class="nav-link active">
-                    <span class="d-inline-block mr-3">Intro</span>
-                    <span class="d-inline-block tm-white-rect"></span>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="#about" class="nav-link">
-                    <span class="d-inline-block mr-3">About</span>
-                    <span class="d-inline-block tm-white-rect"></span>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="#work" class="nav-link">
-                    <span class="d-inline-block mr-3">Work</span>
-                    <span class="d-inline-block tm-white-rect"></span>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="#clients" class="nav-link">
-                    <span class="d-inline-block mr-3">Clients</span>
-                    <span class="d-inline-block tm-white-rect"></span>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="#talk" class="nav-link">
-                    <span class="d-inline-block mr-3">Let's Talk</span>
-                    <span class="d-inline-block tm-white-rect"></span>
-                  </a>
+               
+              
                 </li>
               </ul>
               <ul class="nav flex-row tm-social-links">
@@ -86,7 +59,7 @@
                 </li>
               </ul>
               <footer class="text-center text-white small">
-                <p class="mb--0 mb-2">Copyright 2020 Dream Pulse</p>
+                <p class="mb--0 mb-2">Copyright 2020 UDAYAGIRI</p>
                 <p class="mb-0">Design:
                   <a rel="nofollow" href="https://templatemo.com" class="tm-footer-link">Template Mo</a>
                 </p>
