--- a/scl-doubtology/udayagiri/templates/includes/navbar.html
+++ b/scl-doubtology/udayagiri/templates/includes/navbar.html
@@ -11,8 +11,8 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}"><i class="fas fa-table"></i><span>Table</span></a></li>
                     {% comment %} <li class="nav-item"><a class="nav-link" href="{% url 'login' %}"><i class="far fa-user-circle"></i><span>Login</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'register' %}"><i class="fas fa-user-circle"></i><span>Register</span></a></li> {% endcomment %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'forgot_password' %}"><i class="fas fa-key"></i><span>Forgotten Password</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'teacher' %}"><i class="fas fa-cogs"></i><span>About</span></a></li>
+                    {% comment %} <li class="nav-item"><a class="nav-link" href="{% url 'forgot_password' %}"><i class="fas fa-key"></i><span>Forgotten Password</span></a></li> {% endcomment %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'teacher' %}"><i class="fas fa-cogs"></i><span>Teachers</span></a></li>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
             </div>
