Teacher individual detail

--- a/scl-doubtology/udayagiri/templates/webpages/teacher.html
+++ b/scl-doubtology/udayagiri/templates/webpages/teacher.html
@@ -15,10 +15,12 @@
 
         <div class="row">
 
+{% for teacher in teachers %}
+
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="https://placeimg.com/640/480/people" class="img-fluid" alt="">
+                <img src="{{teacher.photo.url}}" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="fab fa-twitter"></i></a>
                   <a href=""><i class="fab fa-facebook-square"></i></a>
@@ -27,11 +29,13 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
+                <a href="{% url 'teacher_detail' teacher.id %}"><h4>{{teacher.name}}</h4></a>
                 <span>Chief Executive Officer</span>
               </div>
             </div>
           </div>
+
+{% endfor %}
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
