--- a/scl-doubtology/udayagiri/templates/webpages/teacher.html
+++ b/scl-doubtology/udayagiri/templates/webpages/teacher.html
@@ -30,7 +30,7 @@
               </div>
               <div class="member-info">
                 <a href="{% url 'teacher_detail' teacher.id %}"><h4>{{teacher.name}}</h4></a>
-                <span>Chief Executive Officer</span>
+                <span></span>
               </div>
             </div>
           </div>
