Form Submission works

--- a/scl-doubtology/udayagiri/templates/webpages/teacher_detail.html
+++ b/scl-doubtology/udayagiri/templates/webpages/teacher_detail.html
@@ -42,7 +42,7 @@
       </div>
 
     </section>
-{% comment %} 
+
     <section class="youtuber-form container mt-5 mb-5">
       <div class="row">
         <form method="POST" action="{% url 'student' %}" class="col-md-8 offset-md-2">
@@ -103,7 +103,7 @@
         </form>
       </div>
 
-    </section> {% endcomment %}
+    </section>
 
   </main>
 
