--- a/scl-doubtology/udayagiri/templates/webpages/teacher_detail.html
+++ b/scl-doubtology/udayagiri/templates/webpages/teacher_detail.html
@@ -97,7 +97,7 @@
             <textarea name="message" class="form-control" rows="3" placeholder="Details Message"></textarea>
           </div>
           <div class="text-center">
-            <button type="submit" class="btn btn-accent">Contact Us</button>
+            <button type="submit" class="btn btn-primary">Contact Us</button>
           </div>
 
         </form>
