Teacher folder for the templates

--- a/scl-doubtology/udayagiri/templates/user/profile.html
+++ b/scl-doubtology/udayagiri/templates/user/profile.html
@@ -23,7 +23,8 @@
                             <div class="col">
                                 <div class="card shadow mb-3">
                                     <div class="card-header py-3">
-                                        <p class="text-primary m-0 font-weight-bold">User Settings</p>
+                                        <p class="text-primary m-0 font-weight-bold">User Profile</p>
+                                        <span>Don't worry your data will be safe with us</span>
                                     </div>
                                     <div class="card-body">
 
