Iframe tag correction

--- a/scl-doubtology/udayagiri/templates/teachers/teacher_detail.html
+++ b/scl-doubtology/udayagiri/templates/teachers/teacher_detail.html
@@ -84,19 +84,15 @@
         </div>
       </div>
     
-    <section class="video container text-center">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/{{teacher.video_url}}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </section>
-    
+    <h4 class="mt-4">Introduction video</h4>
+    <div class="embed-responsive embed-responsive-16by9 mb-3">
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+    </div>
+        
       <h4>Descritpion</h4>
       <p class="lead">
           {{teacher.description | safe }}
       </p>
-
-      
-
-   
-
     
 
       <div class="person-description">
