--- a/scl-doubtology/udayagiri/templates/webpages/about.html
+++ b/scl-doubtology/udayagiri/templates/webpages/about.html
@@ -18,7 +18,7 @@
 
                 <div class="row">
 
-                    <div class="col-lg-6 video-box align-self-baseline" data-aos="fade-right" data-aos-delay="100">
+                    <div class="col-lg-6 video-box align-self-baseline" >
                         {% comment %} <img src="{% static 'assets/img/about.jpg' %}" class="img-fluid" alt=""> {% endcomment %}
                     </div>
 
@@ -37,11 +37,11 @@
 
 
                 <div class="row">
-                    <div class="col-lg-6 wow fadeInUp order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
+                    <div class="col-lg-6 wow order-1 order-lg-2" >
                         {% comment %} <img src="{% static 'assets/img/about-3.JPG' %}" class="img-fluid" alt=""> {% endcomment %}
                     </div>
 
-                    <div class="col-lg-6 wow fadeInUp pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-right" data-aos-delay="150">
+                    <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-right" data-aos-delay="150">
                         <h3>About Sushiksha Coding League</h3>
                         <p> Sushiksha Coding League is nothing but a Coding School Initiative with a difference. 
                         The Coding School thought was infact ignited by Shri T V Mohandas Pai from the Prerna Stage in 2020. 
@@ -61,7 +61,7 @@
 
                 <div class="row">
 
-                    <div class="col-lg-6 video-box align-self-baseline" data-aos="fade-right" data-aos-delay="100">
+                    <div class="col-lg-6 video-box align-self-baseline">
                         {% comment %} <img src="{% static 'assets/img/about-4.JPG' %}" class="img-fluid" alt=""> {% endcomment %}
                     </div>
 
