--- a/scl-doubtology/udayagiri/templates/webpages/team.html
+++ b/scl-doubtology/udayagiri/templates/webpages/team.html
@@ -7,7 +7,7 @@
 
             <div class="container-fluid">
                 <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                    <h3 class="text-dark mb-0">Teachers</h3></div>
+                    <h3 class="text-dark mb-0">Udayagri team</h3></div>
 
     <!-- ======= Team Section ======= -->
     <section id="team" class="team section-bg">
@@ -15,27 +15,145 @@
 
         <div class="row">
 
-{% for teacher in teachers %}
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="{{teacher.photo.url}}" class="img-fluid" alt="">
+                <img src="https://i.pravatar.cc/300" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="fab fa-twitter"></i></a>
+                  <a href="https://twitter.com/PrathvirajPrab1?s=08"><i class="fab fa-twitter"></i></a>
                   <a href=""><i class="fab fa-facebook-square"></i></a>
                   <a href=""><i class="fab fa-instagram"></i></a>
-                  <a href=""><i class="fab fa-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/prathviraj-prabhu-430123193"><i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <a href="{% url 'teacher_detail' teacher.id %}"><h4>{{teacher.name}}</h4></a>
-                <span></span>
+                <h4>Ajay G Nayak</h4>
+                <span>VKSSF Batch : 2019</span>
+                <span>Email: ajaygnayak221@gmail.com</span>
               </div>
             </div>
           </div>
 
-{% endfor %}
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="https://i.pravatar.cc/300" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="https://twitter.com/PrathvirajPrab1?s=08"><i class="fab fa-twitter"></i></a>
+                  <a href=""><i class="fab fa-facebook-square"></i></a>
+                  <a href=""><i class="fab fa-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/prathviraj-prabhu-430123193"><i class="fab fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Prajaktha P Prabhu</h4>
+                <span>VKSSF Batch : 2019</span>
+                <span>Email: prajakthaprabhu@gmail.com</span>
+              </div>
+            </div>
+          </div>
+
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="https://i.pravatar.cc/300" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="https://twitter.com/PrathvirajPrab1?s=08"><i class="fab fa-twitter"></i></a>
+                  <a href=""><i class="fab fa-facebook-square"></i></a>
+                  <a href=""><i class="fab fa-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/prathviraj-prabhu-430123193"><i class="fab fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Nima</h4>
+                <span>VKSSF Batch : 2019</span>
+                <span>Email : nimasaranga123@gmail.com</span>
+              </div>
+            </div>
+          </div>
+
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="https://i.pravatar.cc/300" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="https://twitter.com/PrathvirajPrab1?s=08"><i class="fab fa-twitter"></i></a>
+                  <a href=""><i class="fab fa-facebook-square"></i></a>
+                  <a href=""><i class="fab fa-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/prathviraj-prabhu-430123193"><i class="fab fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Prathviraj Prabhu</h4>
+                <span>VKSSF Batch : 2019</span>
+                <span>Email : prathvirajbellampalli@gmail.com</span>
+              </div>
+            </div>
+          </div>
+
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="https://i.pravatar.cc/300" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="https://twitter.com/CsParthiv?s=08"><i class="fab fa-twitter"></i></a>
+                  <a href=""><i class="fab fa-facebook-square"></i></a>
+                  <a href=""><i class="fab fa-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/pranita-shenoy-nagar-a404061b1/"><i class="fab fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Pranita</h4>
+                <span>VKSSF Batch : 2019</span>
+                <span>Email: pranitashenoy2001@gmail.com</span>
+              </div>
+            </div>
+          </div>
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="https://i.pravatar.cc/300" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="https://twitter.com/CsParthiv?s=08"><i class="fab fa-twitter"></i></a>
+                  <a href=""><i class="fab fa-facebook-square"></i></a>
+                  <a href=""><i class="fab fa-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/parthiv-kamath-cs-06b46b18a/"><i class="fab fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Parthiv Kamath CS</h4>
+                <span>VKSSF Batch : 2019</span>
+                <span>Email : parthivkmth5@gmail.com</span>
+              </div>
+            </div>
+          </div>
+
+
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="https://i.pravatar.cc/300" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="https://twitter.com/18praneeth"><i class="fab fa-twitter"></i></a>
+                  <a href=""><i class="fab fa-facebook-square"></i></a>
+                  <a href=""><i class="fab fa-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/18praneeth/"><i class="fab fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Praneeth</h4>
+                <span>VKSSF Batch : 2019</span>
+                <span>Email : 18praneeth@gmail.com</span>
+              </div>
+            </div>
+          </div>
+
+
 
         </div>
 
