--- a/scl-doubtology/udayagiri/templates/webpages/team.html
+++ b/scl-doubtology/udayagiri/templates/webpages/team.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
 
  <div class="d-flex flex-column" id="content-wrapper">
 
@@ -12,6 +13,12 @@
     <!-- ======= Team Section ======= -->
     <section id="team" class="team section-bg">
       <div class="container">
+
+      {% comment %} <div class="container text-center">
+      
+        <img src="{% static 'webpages_static/team.svg' %}" class="img-fluid"  width="400px" alt="Sushiksha">
+       
+      </div> {% endcomment %}
 
         <div class="row">
 
