license and privacy

--- a/scl-doubtology/udayagiri/templates/includes/navbar.html
+++ b/scl-doubtology/udayagiri/templates/includes/navbar.html
@@ -13,6 +13,8 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'about' %}"><i class="fas fa-address-card"></i><span>About</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'team' %}"><i class="fas fa-users"></i><span>Team</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'profile' %}"><i class="fas fa-user-cog"></i><span>Profile</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'privacy' %}"><i class="fas fa-user-secret"></i><span>Privacy</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'license' %}"><i class="fas fa-file-signature"></i><span>License</span></a></li>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
             </div>
