--- a/scl-doubtology/udayagiri/templates/webpages/about.html
+++ b/scl-doubtology/udayagiri/templates/webpages/about.html
@@ -70,7 +70,7 @@
 <p>
 With the outbreak of pandemic, the educational institutions had to be shutdown which hindered the learning of a lot of students.The students have to adapt to the online methods of learning which is now the new norm. 
 Reaching out to teachers and resource personals is a rather difficult task. With this project, any student from any corner of the world, willing to learn something can reachout to a teacher. 
-Anyone can create an account and seek help from our verified lecturers. 
+Anyone can create an account and seek help from our verified lecturers. </p>
 
                     </div>
                 </div>
