--- a/scl-doubtology/udayagiri/templates/webpages/team.html
+++ b/scl-doubtology/udayagiri/templates/webpages/team.html
@@ -14,18 +14,13 @@
     <section id="team" class="team section-bg">
       <div class="container">
 
-      {% comment %} <div class="container text-center">
-      
-        <img src="{% static 'webpages_static/team.svg' %}" class="img-fluid"  width="400px" alt="Sushiksha">
-       
-      </div> {% endcomment %}
 
         <div class="row">
 
         <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="https://i.pravatar.cc/300" class="img-fluid" alt="">
+                <img src="{% static 'team_photos/Ajay.jpeg' %}" class="img-fluid" alt="">
                 <div class="social">
                   <a href="https://twitter.com/PrathvirajPrab1?s=08"><i class="fab fa-twitter"></i></a>
                   <a href=""><i class="fab fa-facebook-square"></i></a>
@@ -44,7 +39,7 @@
         <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="https://i.pravatar.cc/300" class="img-fluid" alt="">
+                <img src="{% static 'team_photos/Prajaktha.jpeg' %}" class="img-fluid" alt="">
                 <div class="social">
                   <a href="https://twitter.com/PrathvirajPrab1?s=08"><i class="fab fa-twitter"></i></a>
                   <a href=""><i class="fab fa-facebook-square"></i></a>
@@ -64,7 +59,7 @@
         <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="https://i.pravatar.cc/300" class="img-fluid" alt="">
+                <img src="{% static 'team_photos/Nima.jpg' %}" class="img-fluid" alt="">
                 <div class="social">
                   <a href="https://twitter.com/PrathvirajPrab1?s=08"><i class="fab fa-twitter"></i></a>
                   <a href=""><i class="fab fa-facebook-square"></i></a>
@@ -84,7 +79,7 @@
         <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="https://i.pravatar.cc/300" class="img-fluid" alt="">
+                <img src="{% static 'team_photos/Prathviraj.jpg' %}" class="img-fluid" alt="">
                 <div class="social">
                   <a href="https://twitter.com/PrathvirajPrab1?s=08"><i class="fab fa-twitter"></i></a>
                   <a href=""><i class="fab fa-facebook-square"></i></a>
@@ -104,7 +99,7 @@
         <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="https://i.pravatar.cc/300" class="img-fluid" alt="">
+                <img src="{% static 'team_photos/Pranita.jpeg' %}" class="img-fluid" alt="">
                 <div class="social">
                   <a href="https://twitter.com/CsParthiv?s=08"><i class="fab fa-twitter"></i></a>
                   <a href=""><i class="fab fa-facebook-square"></i></a>
@@ -123,7 +118,7 @@
         <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="https://i.pravatar.cc/300" class="img-fluid" alt="">
+                <img src="{% static 'team_photos/Parthiv.jpeg' %}" class="img-fluid" alt="">
                 <div class="social">
                   <a href="https://twitter.com/CsParthiv?s=08"><i class="fab fa-twitter"></i></a>
                   <a href=""><i class="fab fa-facebook-square"></i></a>
@@ -144,7 +139,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="https://i.pravatar.cc/300" class="img-fluid" alt="">
+                <img src="{% static 'team_photos/Praneeth.jpg' %}" class="img-fluid" alt="">
                 <div class="social">
                   <a href="https://twitter.com/18praneeth"><i class="fab fa-twitter"></i></a>
                   <a href=""><i class="fab fa-facebook-square"></i></a>
